<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/txtNombreCoordenada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombreCoordenada" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/tX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/x"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/tY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/y"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/tZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/z"
                android:inputType="numberSigned" />

        </LinearLayout>

        <Button
            android:id="@+id/btnCrearCoordenada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crearCoordenada" />

    </LinearLayout>

</LinearLayout>